[package]
name = "jda-nas-rust"
version = "0.1.0"
authors = ["JellyBrick"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "1.0.3"
jni = "0.18.0"
lazy_static = "1.4.0"
indexmap = "1.5.1"
